# AutoCoq

./: .gitignore  Acceptor.thy  autocoq-plugin.opam  dune-project
src/: dune  isabelle.ml  main.ml  syntax.mlg  tactic_proof_search.ml  term_predict.ml
theories/: AutoCoq.v  PairingHeap.v  PairingHeapOriginal.v  ProofObligations.thy  ProofObligations.v  Tests.v  dune
